--- a/Expositions.html
+++ b/Expositions.html
@@ -153,7 +153,7 @@ body {
         <div class="col-12 col-lg-10 mt-4">
         <div class="card border-0 ">
             <div class="row g-0 align-items-center">
-                <div class="col-md-6">
+                <div class="col-md-6 p-0">
                     <a href="Candinskiy.html">
                         <img src="images/exp1.jpg" class="custom-card2 rounded w-100">
                     </a>
